--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
-<!--[if lt IE 7 ]><html class="ie ie6" lang="en"> <![endif]-->
-<!--[if IE 7 ]><html class="ie ie7" lang="en"> <![endif]-->
-<!--[if IE 8 ]><html class="ie ie8" lang="en"> <![endif]-->
-<!--[if (gte IE 9)|!(IE)]><!--><html lang="en"> <!--<![endif]-->
+<html lang="en">
 
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-<meta name="description" content="Name of your web site">
-<meta name="author" content="Marketify">
+<meta name="description" content="Bio Leopoldo R Montesinos M">
+<meta name="author" content="Leopoldo R Montesinos R">
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
@@ -111,11 +108,9 @@
                                 <p class="name">Here I'm <span>Leopoldo</span></p>
                                 <div class="wesley_tm_hero_share">
                                     <ul>
-                                        <li><a href="#"><i class="xcon-facebook"></i></a></li>
-                                        <li><a href="#"><i class="xcon-twitter"></i></a></li>
-                                        <li><a href="#"><i class="xcon-linkedin"></i></a></li>
-                                        <li><a href="#"><i class="xcon-instagram"></i></a></li>
-                                        <li><a href="#"><i class="xcon-behance"></i></a></li>
+                                        <li><a href="facebook.com/leopoldo.montesinos" target='_blanck'><i class="xcon-facebook"></i></a></li>
+                                        <li><a href="twitter.com/LeopoldoDNZ" target='_blanck'><i class="xcon-twitter"></i></a></li>
+                                        <li><a href="linkedin.com/in/leopoldo-ramon-montesinos-morenob19164121" target='_blanck'><i class="xcon-linkedin"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -182,7 +177,13 @@
                     <div class="inner_wrap">
                         <div class="leftbox">
                             <h3>We provide high quality and cost effective services.</h3>
-                            <p></p>
+                            <p>
+                                We work on creating web faster and more personalized. we manage excellent rates according to your project needs, and we provide the best support to help your ideas developer.
+                            </p>
+                            <br/>
+                            <p>
+                                If you know what you want, we know how to do it
+                            </p>
                         </div>
                         <div class="rightbox">
                             <div class="progress_bar_wrap_total">
@@ -201,6 +202,10 @@
                                     </div>
                                     <div class="wesley_tm_progress" data-value="50" data-color="#000">
                                         <span><span class="label">React Native - <span class="experience">1 years of experience</span></span><span class="number">50%</span></span>
+                                        <div class="wesley_tm_bar_bg"><div class="wesley_tm_bar_wrap"><div class="wesley_tm_bar"></div></div></div>
+                                    </div>
+                                    <div class="wesley_tm_progress" data-value="80" data-color="#000">
+                                        <span><span class="label">GraphQL - <span class="experience">1 years of experience</span></span><span class="number">80%</span></span>
                                         <div class="wesley_tm_bar_bg"><div class="wesley_tm_bar_wrap"><div class="wesley_tm_bar"></div></div></div>
                                     </div>
                                 </div>
@@ -844,32 +849,29 @@
                                 <div class="image_holder logo">
                                     <img src="img/logo/logo.png" alt="" />
                                 </div>
-                                <p>Creative portfolio studio</p>
+                                <p>Full Stack Deleveloper</p>
                             </li>
                             <li class="wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.4s">
                                 <div class="image_holder">
                                     <img class="svg" src="img/svg/telephone.svg" alt="" />
                                 </div>
-                                <p>+77 (022) 177 05 05</p>
+                                <p>+57 322 300 45 05</p>
                             </li>
                             <li class="wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.6s">
                                 <div class="image_holder">
                                     <img class="svg" src="img/svg/envelope.svg" alt="" />
                                 </div>
-                                <p><a href="#">example@gmail.com</a></p>
+                                <p><a href="mailto:leopoldodibiro@gmail.com">leopoldodibiro@gmail.com</a></p>
                             </li>
                             <li class="wow fadeIn" data-wow-duration="1.2s" data-wow-delay="0.8s">
                                 <div class="image_holder">
                                     <img class="svg" src="img/svg/location2.svg" alt="" />
                                 </div>
-                                <p>123 Qwerty Avenue NYC, USA</p>
+                                <p>Envigado, Antioqia, Colombia</p>
                             </li>
                         </ul>
                     </div>
                 </div>
-            </div>
-            <div class="wesley_tm_footer_wrap">
-                <p class="wow fadeIn"  data-wow-duration="1.2s">&copy; Copyright 2018. Theme designed by <a href="https://themeforest.net/user/marketify">Marketify</a></p>
             </div>
         </div>
         <!-- /FOOTER -->
