--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                                 <p class="name">Here I'm <span>Leopoldo</span></p>
                                 <div class="wesley_tm_hero_share">
                                     <ul>
-                                        <li><a href="facebook.com/leopoldo.montesinos" target='_blanck'><i class="xcon-facebook"></i></a></li>
-                                        <li><a href="twitter.com/LeopoldoDNZ" target='_blanck'><i class="xcon-twitter"></i></a></li>
-                                        <li><a href="linkedin.com/in/leopoldo-ramon-montesinos-morenob19164121" target='_blanck'><i class="xcon-linkedin"></i></a></li>
+                                        <li><a href="wwww.facebook.com/leopoldo.montesinos" target='_blanck'><i class="xcon-facebook"></i></a></li>
+                                        <li><a href="www.twitter.com/LeopoldoDNZ" target='_blanck'><i class="xcon-twitter"></i></a></li>
+                                        <li><a href="www.linkedin.com/in/leopoldo-ramon-montesinos-morenob19164121" target='_blanck'><i class="xcon-linkedin"></i></a></li>
                                     </ul>
                                 </div>
                             </div>
