--- a/cv.html
+++ b/cv.html
@@ -75,6 +75,7 @@
                                     <li><a href="https://facebook.com/leopoldo.montesinos" target='_blanck'><i class="xcon-facebook"></i> facebook.com/leopoldo.montesinos</a></li>
                                     <li><a href="https://twitter.com/LeopoldoDNZ" target='_blanck'><i class="xcon-twitter"></i>@LeopoldoDNZ</a></li>
                                     <li><a href="https://linkedin.com/in/leopoldo-ramon-montesinos-morenob19164121" target='_blanck'><i class="xcon-linkedin"></i>linkedin.com/in/leopoldo-ramon-montesinos-morenob19164121</a></li>
+                                    <li><a href="https://github.com/dibiro" target='_blanck'>Portfolio</a></li>
                                 </ul>
                             </div>
                         </div>
