--- a/cv.html
+++ b/cv.html
@@ -67,7 +67,7 @@
                             <div class="about_short_contact_wrap">
                                 <ul>
                                     <li>
-                                        <span><label>Phone:</label> +52 322 300 45 05</span>
+                                        <span><label>Phone:</label> +57 322 300 45 05</span>
                                     </li>
                                     <li>
                                         <span><label>Mail:</label> <a href="mailto:leopoldodibiro@gmail.com">leopoldodibiro&#64;gmail.com</a></span>
@@ -172,6 +172,7 @@
             </div>
         </div>
         <!-- /LANGUAGES -->
+        
         <!-- Work -->
         <div class="wesley_tm_section">
             <div class="wesley_tm_skills_wrap">
@@ -316,6 +317,82 @@
             </div>
         </div>
         <!-- /Work -->
+        
+        <!-- personal references -->
+        <div class="wesley_tm_section">
+            <div class="wesley_tm_skills_wrap">
+                <div class="container">
+                    <h3>Personal References</h3>
+                    <hr/>
+                    <div class="inner_wrap">
+                        <div class="leftbox">
+                            <h4>Augusto Gonzales</h4>
+                            <p>
+                                Developer
+                            </p>
+                        </div>
+                        <div class="rightbox">
+                            <div class="about_short_contact_wrap">
+                                <ul>
+                                    <li>
+                                        <span><label>Phone:</label> +57 302 400 42 54</span>
+                                    </li>
+                                    <li>
+                                        <span><label>Mail:</label> <a href="mailto:aagg83556@hotmail.com">aagg83556@hotmail.com</a></span>
+                                    </li>
+                                    <li><a href="https://www.linkedin.com/in/augustoalegon/" target='_blanck'><i class="xcon-linkedin"></i>linkedin</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <hr/>
+                    <div class="inner_wrap">
+                        <div class="leftbox">
+                            <h4>Diana Builes Morales</h4>
+                            <p>
+                                Administradora de Empresas. Especialista en Gerencia de Proyectos en Inteligencia de Negocios.
+                            </p>
+                        </div>
+                        <div class="rightbox">
+                            <div class="about_short_contact_wrap">
+                                <ul>
+                                    <li>
+                                        <span><label>Phone:</label> +57 319 415 95 92</span>
+                                    </li>
+                                    <li>
+                                        <span><label>Mail:</label> <a href="mailto:diana.builes@outlook.com">diana.builes@outlook.com</a></span>
+                                    </li>
+                                    <li><a href="https://www.linkedin.com/in/dianabuiles/" target='_blanck'><i class="xcon-linkedin"></i>linkedin</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <hr/>
+                    <div class="inner_wrap">
+                        <div class="leftbox">
+                            <h4>Jessika De Freitas</h4>
+                            <p>
+                                UI designer.
+                            </p>
+                        </div>
+                        <div class="rightbox">
+                            <div class="about_short_contact_wrap">
+                                <ul>
+                                    <li>
+                                        <span><label>Phone:</label> +58 414 486 09 75</span>
+                                    </li>
+                                    <li>
+                                        <span><label>Mail:</label> <a href="mailto:lilijess.yo@gmail.com">lilijess.yo@gmail.com</a></span>
+                                    </li>
+                                    <li><a href="https://www.linkedin.com/in/jessidepin/" target='_blanck'><i class="xcon-linkedin"></i>linkedin</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /personal references -->
         <!-- FOOTER -->
         <div class="wesley_tm_footer_total_wrap">
             <div class="wesley_tm_address_holder_wrap">
