update cv bosstrap

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                             <div class="buttons_wrap">
                                 <ul>
                                     <li>
-                                        <a href="cv.html" target="_blanck"><span>CV</span></a>
+                                        <a href="/cvboostrap.html" target="_blanck"><span>CV</span></a>
                                     </li>
                                     <li class="anchor">
                                         <a href="#contact"><span>Send Message</span></a>
