--- a/cvbootstrap.html
+++ b/cvbootstrap.html
@@ -13,10 +13,10 @@
   <body>
     <div class="container">
         <div class="row" style="margin-top:30px;">
-            <div class="col col-md-3">
+            <div class="col-12 col-md-3">
                 <img src="img/about/22.jpeg" class="img-fluid" style="margin-top:45px;" alt="" />
             </div>
-            <div class="col col-md-9">
+            <div class="col-12 col-md-9">
                 <div class="wesley_tm_main_title_holder about">
                     <h3>About Me</h3>
                 </div>
@@ -28,25 +28,45 @@
                 <div class="about_short_contact_wrap">
                     <ul>
                         <li>
-                            <span><label>Phone:</label> +57 322 300 45 05</span>
+                            <strong>
+                                Phone:
+                            </strong> 
+                            +57 322 300 45 05
                         </li>
                         <li>
-                            <span><label>Mail:</label> <a href="mailto:leopoldodibiro@gmail.com">leopoldodibiro&#64;gmail.com</a></span>
+                            <strong>
+                                Mail:
+                            </strong> 
+                            <a href="mailto:leopoldodibiro@gmail.com">leopoldodibiro&#64;gmail.com</a>
                         </li>
-                        <li><a href="https://facebook.com/leopoldo.montesinos" target='_blanck'><i class="xcon-facebook"></i> facebook.com/leopoldo.montesinos</a></li>
-                        <li><a href="https://twitter.com/LeopoldoDNZ" target='_blanck'><i class="xcon-twitter"></i>@LeopoldoDNZ</a></li>
-                        <li><a href="https://linkedin.com/in/leopoldo-ramon-montesinos-morenob19164121" target='_blanck'><i class="xcon-linkedin"></i>linkedin.com/in/leopoldo-ramon-montesinos-morenob19164121</a></li>
-                        <li><a href="https://github.com/dibiro" target='_blanck'>Portfolio</a></li>
+                        <li>
+                            <strong>
+                                Twitter:
+                            </strong> 
+                            <a href="https://twitter.com/LeopoldoDNZ" target='_blanck'><i class="xcon-twitter"></i>@LeopoldoDNZ</a>
+                        </li>
+                        <li>
+                            <strong>
+                                linkedin:
+                            </strong> 
+                            <a href="https://linkedin.com/in/leopoldo-ramon-montesinos-morenob19164121" target='_blanck'><i class="xcon-linkedin"></i>linkedin.com/in/leopoldo-ramon-montesinos-morenob19164121</a>
+                        </li>
+                        <li>
+                            <strong>
+                                    github:
+                            </strong> 
+                            <a href="https://github.com/dibiro" target='_blanck'>Github</a>
+                        </li>
                     </ul>
                 </div>
             </div>
         </div>
         <div class="row bg-light" style="margin-top:30px;">
-            <div class="col col-md-12">
+            <div class="col-12 col-md-12">
                 <h3>Skill</h3>
             </div>
             <hr class="col-11">
-            <div class="col col-md-6">
+            <div class="col-12 col-md-6">
                 <p>
                     Django
                 </p>
@@ -54,7 +74,7 @@
                     <div class="progress-bar bg-secondary" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="90" aria-valuemax="100">90%</div>
                 </div>
             </div>
-            <div class="col col-md-6">
+            <div class="col-12 col-md-6">
                 <p>
                     JavaScrip
                 </p>
@@ -62,7 +82,7 @@
                     <div class="progress-bar bg-secondary" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="85" aria-valuemax="100">85%</div>
                 </div>
             </div>
-            <div class="col col-md-6">
+            <div class="col-12 col-md-6">
                 <p>
                     React.js
                 </p>
@@ -70,7 +90,7 @@
                     <div class="progress-bar bg-secondary" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="50" aria-valuemax="100">50%</div>
                 </div>
             </div>
-            <div class="col col-md-6">
+            <div class="col-12 col-md-6">
                 <p>
                     React Native
                 </p>
@@ -78,7 +98,7 @@
                     <div class="progress-bar bg-secondary" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="50" aria-valuemax="100">50%</div>
                 </div>
             </div>
-            <div class="col col-md-6">
+            <div class="col-12 col-md-6">
                 <p>
                     GraphQL
                 </p>
@@ -86,7 +106,7 @@
                     <div class="progress-bar bg-secondary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="80" aria-valuemax="100">80%</div>
                 </div>
             </div>
-            <div class="col col-md-6">
+            <div class="col-12 col-md-6">
                 <p>
                     PostgreSQL
                 </p>
@@ -94,7 +114,7 @@
                     <div class="progress-bar bg-secondary" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="95" aria-valuemax="100">95%</div>
                 </div>
             </div>
-            <div class="col col-md-6">
+            <div class="col-12 col-md-6">
                 <p>
                     SQL
                 </p>
@@ -102,7 +122,7 @@
                     <div class="progress-bar bg-secondary" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="85" aria-valuemax="100">85%</div>
                 </div>
             </div>
-            <div class="col col-md-6">
+            <div class="col-12 col-md-6">
                 <p>
                     Node.js
                 </p>
@@ -110,7 +130,7 @@
                     <div class="progress-bar bg-secondary" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="50" aria-valuemax="100">50%</div>
                 </div>
             </div>
-            <div class="col col-md-6">
+            <div class="col-12 col-md-6">
                 <p>
                     Web pack
                 </p>
@@ -118,7 +138,7 @@
                     <div class="progress-bar bg-secondary" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="50" aria-valuemax="100">50%</div>
                 </div>
             </div>
-            <div class="col col-md-6">
+            <div class="col-12 col-md-6">
                 <p>
                     Android
                 </p>
@@ -128,11 +148,11 @@
             </div>
         </div>
         <div class="row" style="margin-top:30px;">
-            <div class="col col-md-12">
+            <div class="col-12 col-md-12">
                 <h3>Languages</h3>
             </div>
             <hr class="col-11">
-            <div class="col col-md-6">
+            <div class="col-12 col-md-6">
                 <p>
                     Spanish
                 </p>
@@ -140,7 +160,7 @@
                     <div class="progress-bar bg-secondary" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="100" aria-valuemax="100">Native</div>
                 </div>
             </div>
-            <div class="col col-md-6">
+            <div class="col-12 col-md-6">
                 <p>
                     English
                 </p>
@@ -150,19 +170,19 @@
             </div>
         </div>
         <div class="row bg-light" style="margin-top:30px;">
-            <div class="col col-md-12">
+            <div class="col-12 col-md-12">
                 <h3>Work Experience</h3>
             </div>
             <hr class="col-11">
-            <div class="col col-md-12">
+            <div class="col-12 col-md-12">
                 <div class="row">
-                    <div class="col col-md-6">
+                    <div class="col-12 col-md-6">
                         <h4>On Business Consulting</h4>
                         <p>
                             01/2018 - present
                         </p>
                     </div>
-                    <div class="col col-md-6">
+                    <div class="col-12 col-md-6">
                         <ul>
                             <li>
                                 Python/Django Backend Deleveloper  
@@ -184,15 +204,15 @@
                 </div>
             </div>
             <hr class="col-11">
-            <div class="col col-md-12">
+            <div class="col-12 col-md-12">
                 <div class="row">
-                    <div class="col col-md-6">
+                    <div class="col-12 col-md-6">
                         <h4>Qrosity</h4>
                         <p>
                             01/2018 - 04/2018
                         </p>
                     </div>
-                    <div class="col col-md-6">
+                    <div class="col-12 col-md-6">
                         <ul>
                             <li>
                                 Python/Django Backend Deleveloper  
@@ -217,15 +237,15 @@
                 </div>
             </div>
             <hr class="col-11">
-            <div class="col col-md-12">
+            <div class="col-12 col-md-12">
                 <div class="row">
-                    <div class="col col-md-6">
+                    <div class="col-12 col-md-6">
                         <h4>thinkers</h4>
                         <p>
                             10/2017 - 12/2017
                         </p>
                     </div>
-                    <div class="col col-md-6">
+                    <div class="col-12 col-md-6">
                         <ul>
                             <li>
                                 Python/Django Backend Deleveloper  
@@ -254,19 +274,19 @@
             </div>
         </div>
         <div class="row" style="margin-top:30px;">
-            <div class="col col-md-12">
+            <div class="col-12 col-md-12">
                 <h3>Personal References</h3>
             </div>
             <hr class="col-11">
-            <div class="col col-md-12">
+            <div class="col-12 col-md-12">
                 <div class="row">
-                    <div class="col col-md-6">
-                        <h4>Augusto Gonzales</h4>
+                    <div class="col-12 col-md-6">
+                        <h4>Augusto Gonzalez</h4>
                         <p>
                             Developer
                         </p>
                     </div>
-                    <div class="col col-md-6">
+                    <div class="col-12 col-md-6">
                         <ul>
                             <li>
                                 <span><label>Phone:</label> +57 302 400 42 54</span>
@@ -282,15 +302,15 @@
                 </div>
             </div>
             <hr class="col-11">
-            <div class="col col-md-12">
+            <div class="col-12 col-md-12">
                 <div class="row">
-                    <div class="col col-md-6">
+                    <div class="col-12 col-md-6">
                         <h4>Diana Builes Morales</h4>
                         <p>
                             Administradora de Empresas. Especialista en Gerencia de Proyectos en Inteligencia de Negocios.
                         </p>
                     </div>
-                    <div class="col col-md-6">
+                    <div class="col-12 col-md-6">
                         <ul>
                             <li>
                                 <span><label>Phone:</label> +57 319 415 95 92</span>
@@ -304,15 +324,15 @@
                 </div>
             </div>
             <hr class="col-11">
-            <div class="col col-md-12">
+            <div class="col-12 col-md-12">
                 <div class="row">
-                    <div class="col col-md-6">
+                    <div class="col-12 col-md-6">
                         <h4>Jessika De Freitas</h4>
                         <p>
                             UI designer.
                         </p>
                     </div>
-                    <div class="col col-md-6">
+                    <div class="col-12 col-md-6">
                         <ul>
                             <li>
                                 <span><label>Phone:</label> +58 414 486 09 75</span>
