--- a/cvbootstrap.html
+++ b/cvbootstrap.html
@@ -18,12 +18,12 @@
             </div>
             <div class="col-12 col-md-9">
                 <div class="wesley_tm_main_title_holder about">
-                    <h3>About Me</h3>
+                    <h3 class="text-info">About Me</h3>
                 </div>
                 <div class="subtitle"><p>Full Stack Web Developer &amp; React Native Developer</p></div>
                 <div class="definition">
-                    <p>Hi! My name is <strong>Leopoldo Montesinos</strong>. I'm backend developer with many experience, I like to speak about Django and technology; i want to know more about new technologies, frameworks and libraries.</p>
-                    <p>I grew up in Aragua, Venezuela. in 2017 I moved to Medellin, Colombia where I strengthened my knowledge on the web with react.js and started my path on mobile with React Native, later in 2018 I specialized in sap technologies but without leaving behind my passion for django react and in general for the development.</p>
+                    <p class="text-justify">Hi! My name is <strong>Leopoldo Montesinos</strong>. I'm backend developer with many experience, I like to speak about Django and technology; i want to know more about new technologies, frameworks and libraries.</p>
+                    <p class="text-justify">I grew up in Aragua, Venezuela. in 2017 I moved to Medellin, Colombia where I strengthened my knowledge on the web with react.js and started my path on mobile with React Native, later in 2018 I specialized in sap technologies but without leaving behind my passion for django react and in general for the development.</p>
                 </div>
                 <div class="about_short_contact_wrap">
                     <ul>
@@ -63,122 +63,122 @@
         </div>
         <div class="row bg-light" style="margin-top:30px;">
             <div class="col-12 col-md-12">
-                <h3>Skill</h3>
+                <h3 class="text-info">Skill</h3>
             </div>
             <hr class="col-11">
             <div class="col-12 col-md-6">
-                <p>
+                <h6>
                     Django
-                </p>
+                </h6>
                 <div class="progress">
-                    <div class="progress-bar bg-secondary" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="90" aria-valuemax="100">90%</div>
+                    <div class="progress-bar bg-info" role="progressbar" style="width: 90%" aria-valuenow="90" aria-valuemin="90" aria-valuemax="100">90%</div>
                 </div>
             </div>
             <div class="col-12 col-md-6">
-                <p>
+                <h6>
                     JavaScrip
-                </p>
+                </h6>
                 <div class="progress">
-                    <div class="progress-bar bg-secondary" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="85" aria-valuemax="100">85%</div>
+                    <div class="progress-bar bg-info" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="85" aria-valuemax="100">85%</div>
                 </div>
             </div>
             <div class="col-12 col-md-6">
-                <p>
+                <h6>
                     React.js
-                </p>
+                </h6>
                 <div class="progress">
-                    <div class="progress-bar bg-secondary" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="50" aria-valuemax="100">50%</div>
+                    <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="50" aria-valuemax="100">50%</div>
                 </div>
             </div>
             <div class="col-12 col-md-6">
-                <p>
+                <h6>
                     React Native
-                </p>
+                </h6>
                 <div class="progress">
-                    <div class="progress-bar bg-secondary" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="50" aria-valuemax="100">50%</div>
+                    <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="50" aria-valuemax="100">50%</div>
                 </div>
             </div>
             <div class="col-12 col-md-6">
-                <p>
+                <h6>
                     GraphQL
-                </p>
+                </h6>
                 <div class="progress">
-                    <div class="progress-bar bg-secondary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="80" aria-valuemax="100">80%</div>
+                    <div class="progress-bar bg-info" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="80" aria-valuemax="100">80%</div>
                 </div>
             </div>
             <div class="col-12 col-md-6">
-                <p>
+                <h6>
                     PostgreSQL
-                </p>
+                </h6>
                 <div class="progress">
-                    <div class="progress-bar bg-secondary" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="95" aria-valuemax="100">95%</div>
+                    <div class="progress-bar bg-info" role="progressbar" style="width: 95%" aria-valuenow="95" aria-valuemin="95" aria-valuemax="100">95%</div>
                 </div>
             </div>
             <div class="col-12 col-md-6">
-                <p>
+                <h6>
                     SQL
-                </p>
+                </h6>
                 <div class="progress">
-                    <div class="progress-bar bg-secondary" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="85" aria-valuemax="100">85%</div>
+                    <div class="progress-bar bg-info" role="progressbar" style="width: 85%" aria-valuenow="85" aria-valuemin="85" aria-valuemax="100">85%</div>
                 </div>
             </div>
             <div class="col-12 col-md-6">
-                <p>
+                <h6>
                     Node.js
-                </p>
+                </h6>
                 <div class="progress">
-                    <div class="progress-bar bg-secondary" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="50" aria-valuemax="100">50%</div>
+                    <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="50" aria-valuemax="100">50%</div>
                 </div>
             </div>
             <div class="col-12 col-md-6">
-                <p>
+                <h6>
                     Web pack
-                </p>
+                </h6>
                 <div class="progress">
-                    <div class="progress-bar bg-secondary" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="50" aria-valuemax="100">50%</div>
+                    <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="50" aria-valuemax="100">50%</div>
                 </div>
             </div>
             <div class="col-12 col-md-6">
-                <p>
+                <h6>
                     Android
-                </p>
+                </h6>
                 <div class="progress">
-                    <div class="progress-bar bg-secondary" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="30" aria-valuemax="100">30%</div>
+                    <div class="progress-bar bg-info" role="progressbar" style="width: 30%" aria-valuenow="30" aria-valuemin="30" aria-valuemax="100">30%</div>
                 </div>
             </div>
         </div>
         <div class="row" style="margin-top:30px;">
             <div class="col-12 col-md-12">
-                <h3>Languages</h3>
+                <h3 class="text-info">Languages</h3>
             </div>
             <hr class="col-11">
             <div class="col-12 col-md-6">
-                <p>
+                <h6>
                     Spanish
-                </p>
+                </h6>
                 <div class="progress">
-                    <div class="progress-bar bg-secondary" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="100" aria-valuemax="100">Native</div>
+                    <div class="progress-bar bg-info" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="100" aria-valuemax="100">Native</div>
                 </div>
             </div>
             <div class="col-12 col-md-6">
-                <p>
+                <h6>
                     English
-                </p>
+                </h6>
                 <div class="progress">
-                    <div class="progress-bar bg-secondary" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="65" aria-valuemax="100">Intermediate</div>
+                    <div class="progress-bar bg-info" role="progressbar" style="width: 65%" aria-valuenow="65" aria-valuemin="65" aria-valuemax="100">Intermediate</div>
                 </div>
             </div>
         </div>
         <div class="row bg-light" style="margin-top:30px;">
             <div class="col-12 col-md-12">
-                <h3>Work Experience</h3>
+                <h3 class="text-info">Work Experience</h3>
             </div>
             <hr class="col-11">
             <div class="col-12 col-md-12">
                 <div class="row">
                     <div class="col-12 col-md-6">
-                        <h4>On Business Consulting</h4>
-                        <p>
+                        <h5>On Business Consulting</h5>
+                        <p class="text-secondary">
                             01/2018 - present
                         </p>
                     </div>
@@ -207,8 +207,8 @@
             <div class="col-12 col-md-12">
                 <div class="row">
                     <div class="col-12 col-md-6">
-                        <h4>Qrosity</h4>
-                        <p>
+                        <h5>Qrosity</h5>
+                        <p class="text-secondary">
                             01/2018 - 04/2018
                         </p>
                     </div>
@@ -240,8 +240,8 @@
             <div class="col-12 col-md-12">
                 <div class="row">
                     <div class="col-12 col-md-6">
-                        <h4>thinkers</h4>
-                        <p>
+                        <h5>thinkers</h5>
+                        <p class="text-secondary">
                             10/2017 - 12/2017
                         </p>
                     </div>
@@ -275,14 +275,14 @@
         </div>
         <div class="row" style="margin-top:30px;">
             <div class="col-12 col-md-12">
-                <h3>Personal References</h3>
+                <h3 class="text-info">Personal References</h3>
             </div>
             <hr class="col-11">
             <div class="col-12 col-md-12">
                 <div class="row">
                     <div class="col-12 col-md-6">
-                        <h4>Augusto Gonzalez</h4>
-                        <p>
+                        <h5>Augusto Gonzalez</h5>
+                        <p class="text-secondary">
                             Developer
                         </p>
                     </div>
@@ -305,8 +305,8 @@
             <div class="col-12 col-md-12">
                 <div class="row">
                     <div class="col-12 col-md-6">
-                        <h4>Diana Builes Morales</h4>
-                        <p>
+                        <h5>Diana Builes Morales</h5>
+                        <p class="text-secondary">
                             Administradora de Empresas. Especialista en Gerencia de Proyectos en Inteligencia de Negocios.
                         </p>
                     </div>
@@ -327,8 +327,8 @@
             <div class="col-12 col-md-12">
                 <div class="row">
                     <div class="col-12 col-md-6">
-                        <h4>Jessika De Freitas</h4>
-                        <p>
+                        <h5>Jessika De Freitas</h5>
+                        <p class="text-secondary">
                             UI designer.
                         </p>
                     </div>
