--- a/cvbootstrap.html
+++ b/cvbootstrap.html
@@ -240,7 +240,7 @@
             <div class="col-12 col-md-12">
                 <div class="row">
                     <div class="col-12 col-md-6">
-                        <h5>thinkers</h5>
+                        <h5>Thinkers</h5>
                         <p class="text-secondary">
                             10/2017 - 12/2017
                         </p>
